syntax = "proto3";

package com.wallet.event;

option java_multiple_files = true;
option java_package = "com.wallet.command.event.proto";
option java_outer_classname = "WalletEventProtos";

import "google/protobuf/timestamp.proto";

// Base event message containing common fields
message EventMessage {
    string event_id = 1;
    string account_id = 2;
    string operator_id = 3;
    google.protobuf.Timestamp timestamp = 4;
    oneof event_data {
        AccountCreatedEventData account_created = 5;
        BalanceChangedEventData balance_changed = 6;
        AccountFrozenEventData account_frozen = 7;
        AccountUnfrozenEventData account_unfrozen = 8;
        AccountClosedEventData account_closed = 9;
    }
}

// Event list wrapper for batch serialization
message EventList {
    repeated EventMessage events = 1;
}

// Account created event specific data
message AccountCreatedEventData {
    string account_id = 1;
    string owner_id = 2;
    string currency = 3;
    string initial_balance = 4;
    string operator_id = 5;
    int64 timestamp = 6;
    string asset_type = 7;
    string min_balance = 8;
    string max_balance = 9;
}

// Balance changed event specific data
message BalanceChangedEventData {
    string account_id = 1;
    string amount = 2;
    string operator_id = 3;
    string transaction_id = 4;
    int64 timestamp = 5;
    string transaction_type = 6;
    string target_account_id = 7;
}

// Account frozen event specific data
message AccountFrozenEventData {
    string account_id = 1;
    string operator_id = 2;
    string reason = 3;
    int64 timestamp = 4;
}

// Account unfrozen event specific data
message AccountUnfrozenEventData {
    string account_id = 1;
    string operator_id = 2;
    string reason = 3;
    int64 timestamp = 4;
}

// Account closed event specific data
message AccountClosedEventData {
    string account_id = 1;
    string operator_id = 2;
    string final_balance = 3;
    string reason = 4;
    int64 timestamp = 5;
}
